1_day_1/2_kubernetes/4_ingress/1_basic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app: nginx-ingress

spec:
  type: LoadBalancer

  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: ingress-nginx
