1_day_1/2_kubernetes/4_ingress/1_basic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: api-svc
          servicePort: 8080

      - path: /web
        backend:
          serviceName: web
          servicePort: 8080
